# roketz

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  assets.rdss  build.rs  deny.toml  justfile
.github/workflows/: ci.yml
assets/: assets.ron  destructions.csv
assets/maps/: maps.kdl
assets/maps/first/: map.kdl
assets/maps/second/: map.kdl
assets/maps/test/: map.kdl
assets/shaders/: terrain.frag  terrain.vert
assets/sound/: README.md
assets/src/: lib.rs
assets_crate/: Cargo.toml
assets_crate/src/: lib.rs
benches/: bvh.rs
config/: Info.plist  macos_run.sh
crates/assets/: Cargo.toml  build.rs
crates/assets/src/: lib.rs
crates/bonk2d/: Cargo.toml
crates/bonk2d/src/: aabb.rs  lib.rs  process.rs  transform.rs
crates/bonk2d/src/collider/: circle.rs  mod.rs
crates/bonk2d/src/colliders/: mod.rs
crates/bvh/: Cargo.toml
crates/bvh/benches/: bvh.rs
crates/bvh/src/: lib.rs  node.rs  struct.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: lib.rs  map.rs
crates/ecs/src/cs/: bullet.rs  mod.rs  physics.rs  player.rs  rapier.rs  render.rs  terrain.rs
crates/ecs/src/r/: debug.rs  mod.rs  rapier.rs  sound.rs
crates/roketz/: Cargo.toml  build.rs
crates/roketz/benches/: bvh.rs
crates/roketz/src/: camera.rs
crates/roketz/src/ecs/cs/: transform.rs
crates/roketz/src/game/scenes/: manager.rs  no_scene.rs
crates/roketz/src/scenes/: battle.rs
crates/sound/: .gitignore  Cargo.toml
crates/sound/src/: engine.rs  lib.rs
fmod/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
fmod/Metadata/Asset/: {cce2e800-13b2-4598-8729-2e5770e62964}.xml
fmod/Metadata/AudioFile/: {0d157651-b231-4eb8-b780-857b6dd68568}.xml  {394db4fd-254d-45a0-8013-82b448458628}.xml  {3caee7f4-0df2-4c9c-80ef-88993309baad}.xml  {81658a6a-060e-4c3c-9743-48aad43bc99e}.xml
fmod/Metadata/Bank/: {77173157-ecc0-4ac1-81a9-46010c87d267}.xml
fmod/Metadata/BankFolder/: {b5de9262-2227-4fea-8b0f-0960978cba4a}.xml
fmod/Metadata/EffectPresetFolder/: {dd9ebb27-61d9-4999-a096-63189befc87a}.xml
fmod/Metadata/EncodingSetting/: {59720288-2290-4a94-a828-cee77d2784a4}.xml
fmod/Metadata/Event/: {3cb27b4b-8108-4d0b-b817-99dd7c66ab8e}.xml  {459172d2-6d21-45fd-b8a9-b59cc4ff64f5}.xml
fmod/Metadata/EventFolder/: {33893168-78aa-4943-b058-ef6dd4eac76e}.xml  {c6021bce-56a1-4676-9c8c-4af4366d2408}.xml  {db5c61e2-ba11-4315-bf40-68a48e3cad9d}.xml
fmod/Metadata/ParameterPreset/: {b0b1e351-0a03-480e-9081-ccac98056cc5}.xml  {d39af72e-72e3-4d46-92c5-af5835eb64be}.xml
fmod/Metadata/ParameterPresetFolder/: {ced375ae-b78f-4135-8a78-72890f02f927}.xml
fmod/Metadata/Platform/: {6a1402fb-b195-4528-9374-390052a68937}.xml
fmod/Metadata/ProfilerFolder/: {6b3dd1d4-b23b-4779-b6e7-8a3f1d19ba70}.xml
fmod/Metadata/Return/: {2ea60a25-0717-4acb-a997-0017a33053fc}.xml
fmod/Metadata/SandboxFolder/: {4fbdb5b0-734c-4b7a-8ad2-92448f960186}.xml
fmod/Metadata/SnapshotGroup/: {773f3f0f-6ea4-4eb6-9200-aed7c199aefa}.xml
fmod_bin/linux/: README.md
fmod_bin/macos/: .gitignore  README.md
scripts/: check_targets.sh  check_tools.sh  test.rhai
src/: app.rs  config.rs  game.rs  lib.rs  main.rs  result.rs  tests.rs
src/bvh/: aabb.rs  node.rs  struct.rs
src/components/: mod.rs  transform.rs
src/ecs/: mod.rs
src/ecs/cs/: bullet.rs  mod.rs  physics.rs  player.rs  terrain.rs  transform.rs
src/ecs/res/: dt.rs  gravity.rs
src/game/: data.rs  manager.rs  mod.rs
src/game/scenes/: manager.rs  mod.rs  no_scene.rs  scene.rs
src/rhai/: engine.rs  mod.rs  script.rs
src/scenes/: battle.rs  menu.rs  mod.rs  tests.rs
src/systems/: mod.rs  transform.rs
src/world/: mod.rs
src/wrappers/: bullet.rs  camera.rs  mod.rs  player.rs  terrain.rs
