[workspace]
resolver = "2"
members = [
    "bin/roketz",
    "bin/playground",
    "crates/assets",
    "crates/ecs",
    "crates/bvh",
    "crates/bonk2d",
]

[workspace.dependencies]
assets = { path = "crates/assets" }
ecs = { path = "crates/ecs" }
bvh = { path = "crates/bvh" }
bonk2d = { path = "crates/bonk2d" }

rasset = "1.0.0"
anyhow = "1.0.98"
dirs = "6.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"
macroquad = "0.4.14"
egui = "0.31.1"
egui-macroquad = "0.17.3"
egui_inspect = "0.1.3"
nix = { version = "0.30.1", features = ["signal"] }
signal-hook = "0.3.18"
bevy_ecs = "0.16.1"
criterion = "0.5"
bincode = "2.0.1"
