[workspace]
resolver = "2"
members = [
    "bin/roketz",
    "crates/bvh",
    "crates/ecs",
]

[profile.release]
strip = "symbols"

[workspace.dependencies]
bvh = { path = "crates/bvh" }
ecs = { path = "crates/ecs" }

anyhow = "1.0.98"
bevy_ecs = "0.16.1"
bincode = "2.0.1"
criterion = "0.5"
dirs = "6.0.0"
egui = "0.31.1"
egui-macroquad = "0.17.3"
egui_inspect = "0.1.3"
knus = "3.3.1"
macroquad = "0.4.14"
nix = { version = "0.30.1", features = ["signal"] }
rapier2d = { version = "0.26.1", features = ["simd-stable"] }
rdss = "0.2.0"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = "0.3.18"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.dev.package.rapier2d]
opt-level = 3

[profile.release.package.rapier2d]
codegen-units = 1

[profile.dev.package.bevy_ecs]
opt-level = 3

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "apt-get update -y",
    "apt-get install -y pkg-config libx11-dev libxi-dev libgl1-mesa-dev libasound2-dev"
]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "apt-get update -y",
    "apt-get install -y pkg-config libx11-dev libxi-dev libgl1-mesa-dev libasound2-dev"
]
