[package]
name = "ecs"
license = "MIT OR Apache-2.0"
version = "0.0.0"
edition = "2024"

[dependencies]
bvh.workspace = true
sound.workspace = true

anyhow.workspace = true
bevy_ecs.workspace = true
knus.workspace = true
macroquad.workspace = true
rapier2d.workspace = true
rdss.workspace = true
tracing.workspace = true
