[package]
name = "roketz"
license = "MIT OR Apache-2.0"
version = "0.1.0"
build = "build.rs"
edition = "2024"

[dependencies]
assets.workspace = true
rasset.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
signal-hook.workspace = true
dirs.workspace = true
nix.workspace = true
ron.workspace = true
serde.workspace = true
macroquad.workspace = true
bevy_ecs.workspace = true
egui.workspace = true
egui-macroquad.workspace = true

[build-dependencies]
assets = { path = "../assets", features = ["declare"] }
anyhow.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bvh"
harness = false
